--- a/backend/views/register.ejs
+++ b/backend/views/register.ejs
@@ -77,6 +77,7 @@
 
 		<input type="submit" value="register">
 	</form>
+	<a href="/user-login">Log In Page</a>
 	<script>
 		document.getElementById("inputForm").addEventListener("submit", function (e) {
 			e.preventDefault();
