--- a/Frontend/src/pages/home/home.module.css
+++ b/Frontend/src/pages/home/home.module.css
@@ -1,3 +1,25 @@
 .main{
 	display: flex;
+	height: 100vh;
 }
+
+.section{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+    width: calc(100vw - 16vw);
+    height: 100%;
+    overflow: hidden;
+}
+
+.embedSection{
+	display: flex;
+	flex-direction: column;
+	width: calc(100vw - 16vw);
+	/* min-height: calc(100% - 8vh); */
+	height: auto;
+	margin-top: 8vh;
+	overflow-y: auto;
+	background-color: var(--primary);
+}
+
