--- a/Frontend/src/partials/header/header.module.css
+++ b/Frontend/src/partials/header/header.module.css
@@ -3,16 +3,16 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	width: 100%;
-	flex: 5;
+	width: calc(100vw - 16vw);
+	flex: 1;
 	height: 8vh;
 	background-color: var(--tertiary);
-	overflow: hidden;
+	position: fixed;
 }
 
 .createButton{
 	display: flex;
-	justify-content: center;
+	justify-content: center;							
 	align-items: center;
 	background-color: var(--background-color);
 	color: var(--textdark);
@@ -111,7 +111,7 @@
 	height: 2em;
 	width: 2em;
 	background-color: transparent;
-	border-radius: 50%;
+	border-radius: 10px;
 	border: none;
 	outline: none;
 	font-size: 1.25em;
