--- a/Frontend/src/components/overviews/overview.module.css
+++ b/Frontend/src/components/overviews/overview.module.css
@@ -12,6 +12,7 @@
 	justify-content: space-between;
 	flex: 1;
 	height: 100%;
+	padding: 4px 0;
 	gap: 1em;
 	margin: 1em;
 	box-sizing: border-box;
@@ -26,14 +27,18 @@
 
 .budgetSection{
 	display: flex;
-	flex: 1;
+	flex: .90;
 	flex-direction: column;
 	align-items: center;
-	height: 100%;
+	/* height: calc(90% - 4px); */
+	height: calc(70%);
 	border-radius: 15px;
 	margin: 1em;
 	border: 1px solid var(--secondary);
+	padding-bottom: 4px;
 	overflow: hidden;
+	box-shadow: 0px 2px 2px var(--textdark);
+	background-color: var(--background-color);
 }
 
 .budgetSection header{
@@ -54,6 +59,7 @@
 	border: 1px solid var(--secondary);
 	overflow: hidden;
 	box-shadow: 0px 2px 2px var(--textdark);
+	background-color: var(--background-color);
 }
 
 .inventorySection header{
@@ -84,11 +90,10 @@
 
 .sectionChart{
 	display: flex;
-	justify-content: center;
+	flex-direction: column;
+	justify-content: flex-start;
 	align-items: center;
 	width: 100%;
-	padding: 1em;
+	padding: 2em;
 	height: 100%;
-	background-color: var(--background-color);
-	box-shadow: 0px 2px 2px var(--textdark);
 }
