--- a/Frontend/src/components/prompt/prompt.module.css
+++ b/Frontend/src/components/prompt/prompt.module.css
@@ -4,9 +4,9 @@
 	left: 0;
 	height: 100%;
 	width: 100%;
-	background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-	backdrop-filter: blur(10px); /* Apply blur effect to the background */
-	-webkit-backdrop-filter: blur(10px); /* For Safari support */
+	background-color: rgba(0, 0, 0, 0.5);
+	backdrop-filter: blur(10px);
+	-webkit-backdrop-filter: blur(10px);
 	z-index: 1;
 }
 
@@ -43,6 +43,8 @@
 }
 
 .closeButton{
+	display: flex;
+	justify-content: flex-end;
 	border-radius: 15px;
 	width: 100%;
 	height: 2em;
@@ -53,9 +55,14 @@
 .closeButton button{
 	height: 2em;
 	width: 2em;
-	margin: 0px -10px; 
+	margin: 4px; 
 	border-radius: 50%;
 	transition: all 500ms;
+	border: 0;
+	outline: 0;
+	background-color: transparent;
+	color: var(--textdark);
+	cursor: pointer;
 }
 
 .closeButton button:hover{
