--- a/Frontend/src/pages/home/home.module.css
+++ b/Frontend/src/pages/home/home.module.css
@@ -8,7 +8,7 @@
 .section{
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	justify-content: flex-start;
 	width: 100%;
     height: 100%;
     overflow: hidden;
