--- a/Frontend/src/partials/register/register.module.css
+++ b/Frontend/src/partials/register/register.module.css
@@ -26,10 +26,18 @@
   width: 100%;
 }
 
+.error {
+  color: red;
+  font-size: 0.875rem;
+  margin-top: 0.25rem;
+}
+
+
 .logo {
   display: flex;
   width: 100%;
-  
+  margin-left: 20px;
+  margin-top: 20px;
 }
 
 .container input[type="number"]::-webkit-outer-spin-button,
