--- a/Frontend/src/partials/profile/profile.module.css
+++ b/Frontend/src/partials/profile/profile.module.css
@@ -4,8 +4,9 @@
     justify-content: flex-start;
     align-items: center;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: #f7f7f7;
+    /* overflow: hidden; */
 }
 
 .header{
