--- a/Frontend/src/partials/profile/profile.module.css
+++ b/Frontend/src/partials/profile/profile.module.css
@@ -94,6 +94,13 @@
     margin-bottom: 2em;
 }
 
+.edit {
+    width: 40px;
+    height: 40px;
+    margin-bottom: 1.5em;
+    margin-left: 3em;
+}
+
 .field {
     display: grid;
     grid-template-columns: repeat(3, 1fr); 
