Polished some frontend stuff
finished all models, no controller tho

--- a/Frontend/src/partials/records/records.module.css
+++ b/Frontend/src/partials/records/records.module.css
@@ -150,6 +150,11 @@
 	transition: all 250ms;
 }
 
+.delete button:disabled{
+	background-color: var(--tertiary);
+	color: var(--textlight);
+}
+
 .row {
 	color: var(--textdark);
 	display: flex;
