--- a/Frontend/src/partials/profile editing/profileEdit.module.css
+++ b/Frontend/src/partials/profile editing/profileEdit.module.css
@@ -95,7 +95,13 @@
     border-radius: 40px;
     background-color: white;
     padding: 4em;
-    margin-bottom: 2em;
+}
+
+.middle form{
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    padding: 1em;
 }
 
 .field {
@@ -131,13 +137,12 @@
 }
 
 .submit {
-    margin-top: 1em;
+    margin: auto;
     border-radius: 10px;
-    width: 500px;
+    width: 90%;
     height: 40px;
-    background-color: #4caf50;
+    background-color: var(--green);
     font-weight: bolder;
-    margin-left: 2em;
 }
 
 /* For smaller screens, make the grid responsive */
