--- a/Frontend/src/pages/dashboard/dashboard.module.css
+++ b/Frontend/src/pages/dashboard/dashboard.module.css
@@ -1,58 +1,86 @@
-.section{
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: center;
-	width: 100%;
-	min-height: 100vh;
-	height: auto;
+.section {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    min-height: 100vh;
+    height: auto;
 }
 
-.welcomeHeader{
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: flex-start;
-	padding: 1em;
-	margin: 1em;
-	width: 98%;
-	border-radius: 15px;
-	background-color: var(--background-color);
-	box-shadow: 0px 2px 2px var(--textdark);
+.welcomeHeader {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 1em;
+    margin: 1em;
+    width: 98%;
+    border-radius: 15px;
+    background-color: var(--background-color);
+    box-shadow: 0px 2px 2px var(--textdark);
 }
 
-.welcomeHeader h1{
-	margin: 0;
-	font-size: 1.5em;
-	color: var(--textdark);
+.welcomeHeader h1 {
+    margin: 0;
+    font-size: 1.5em;
+    color: var(--textdark);
 }
 
-.welcomeHeader p{
-	font-size: 1em;
-	margin: 0;
-	color: var(--textdark);
+.welcomeHeader p {
+    font-size: 1em;
+    margin: 0;
+    color: var(--textdark);
 }
 
-.firstSection{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin: 1em;
-	width: 98%;
-	height: auto;
-	padding: 4px 0;
+.firstSection, .secondSection {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1em;
+    width: 98%;
+    height: auto;
+    padding: 4px 0;
+    gap: 1em;
 }
 
-.secondSection{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin: 1em;
-	width: 98%;
-	height: auto;
+.footerSection {
+    height: auto;
+    width: 100%;
 }
 
-.footerSection{
-	height: auto;
-	width: 100%;
+@media (max-width: 768px) {
+    .welcomeHeader h1 {
+        font-size: 1.2em;
+    }
+
+    .welcomeHeader p {
+        font-size: 0.9em;
+    }
+
+    .firstSection, .secondSection {
+        flex-direction: column;
+        align-items: stretch;
+        gap: 0.5em;
+    }
+}
+
+@media (max-width: 480px) {
+    .welcomeHeader {
+        padding: 0.5em;
+        margin: 0.5em;
+    }
+
+    .welcomeHeader h1 {
+        font-size: 1em;
+    }
+
+    .welcomeHeader p {
+        font-size: 0.8em;
+    }
+
+    .firstSection, .secondSection {
+        gap: 0.3em;
+        margin: 0.5em;
+    }
 }
