--- a/Frontend/src/partials/premium/premium.module.css
+++ b/Frontend/src/partials/premium/premium.module.css
@@ -60,10 +60,10 @@
     box-sizing: border-box; 
     position: relative;
 }
-
+/*
 .Premium h2, .Premium h3, .Premium ul {
 
-}
+}*/
 
 .button {
     width: 350px;
