--- a/Frontend/src/partials/register/register.module.css
+++ b/Frontend/src/partials/register/register.module.css
@@ -1,6 +1,5 @@
 .container {
   display: flex;
-  /* grid-template-columns: 40% 60%; */
   height: 100vh;
   overflow: hidden;
 }
@@ -201,5 +200,54 @@ input[type="number"]::-webkit-inner-spin-button {
   .reg input[type="submit"] {
     width: 100%;
     height: 45px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .container {
+    flex-direction: column;
+  }
+
+  .formSection {
+    width: 100%;
+  }
+
+  .imageSection img {
+    height: auto;
+  }
+
+  input,
+  .gender select {
+    width: 100%;
+  }
+
+  .reg input[type="submit"] {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .formSection {
+    padding: 10px;
+  }
+
+  input,
+  .gender select {
+    height: 40px;
+  }
+
+  .reg input[type="submit"] {
+    height: 45px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .imageSection {
+    display: none; 
+  }
+
+  .formSection {
+    width: 100%;
+    padding: 15px;
   }
 }
